--- a/servicio-hojas-vida/src/main/resources/bootstrap.yml
+++ b/servicio-hojas-vida/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: servicio-hojas-vida
+  profiles:
+    active: desarrollo
   cloud:
     config:
       uri: http://localhost:8081
