--- a/config-data/servicio-empresa-desarrollo.yml
+++ b/config-data/servicio-empresa-desarrollo.yml
@@ -4,36 +4,22 @@ server:
     include-message: always
     include-binding-errors: always
 
-# To See H2 Console in Browser:
-# http://localhost:8091/h2-console
-# Enabling H2 Console
 spring:
-  h2:
-    console:
-      enabled: true
-  # ===============================
-  # DB
-  # ===============================
   datasource:
-    url: jdbc:h2:mem:empresaDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    platform: h2
-    username: sa
-    password:
-
-  # ===============================
-  # JPA / HIBERNATE
-  # ===============================
+    url: jdbc:mysql://localhost:3306/bd_empresa?serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+    username: root
+    password: sasa2121
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: true
-    hibernate:
+    database-platform: org.hibernate.dialect.MySQL8Dialect 
+    hibernate: 
       ddl-auto: update
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
+
+logging:
+  lavel:
+    org:
       hibernate:
-        show_sql: true
-        use_sql_comments: false
-        format_sql: false
+        SQL: debug
 
 eureka:
   client:
