agregando conexion con mySQL nomina y empresa

--- a/servicio-empresa/src/main/resources/bootstrap.yml
+++ b/servicio-empresa/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: servicio-empresa
+  profiles:
+    active: desarrollo
   cloud:
     config:
       uri: http://localhost:8081
