--- a/servicio-pagos/src/main/resources/bootstrap.yml
+++ b/servicio-pagos/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: servicio-pagos
+  profiles:
+    active: desarrollo
   cloud:
     config:
       uri: http://localhost:8081
