--- a/registry-service/src/main/resources/bootstrap.yml
+++ b/registry-service/src/main/resources/bootstrap.yml
@@ -1,8 +1,14 @@
 spring:
   application:
     name: registry-service
+  profiles:
+    active: desarrollo
   cloud:
     config:
-      uri: http://localhost:8081
+      fail-fast: true
+      retry:
+        maxAttempts: 200
+        maxInterval: 10000
+      uri: http://config-service:8081
       username: root
       password: s3cr3t
