--- a/registry-service/src/main/resources/bootstrap.yml
+++ b/registry-service/src/main/resources/bootstrap.yml
@@ -5,10 +5,10 @@ spring:
     active: desarrollo
   cloud:
     config:
-      fail-fast: true
+      fail-fast: false
       retry:
-        maxAttempts: 200
-        maxInterval: 10000
-      uri: http://config-service:8081
+        maxAttempts: 2000
+        maxInterval: 100000
+      uri: http://localhost:8081
       username: root
       password: s3cr3t
