--- a/servicio-hojas-vida/src/main/resources/bootstrap.yml
+++ b/servicio-hojas-vida/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
     active: desarrollo
   cloud:
     config:
-      uri: http://localhost:8081
+      uri: http://config-service:8081
       username: root
       password: s3cr3t
