--- a/registry-service/src/main/resources/application.yml
+++ b/registry-service/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+spring:
+  application:
+    name: registry-service
 server:
   port: 8099
 
@@ -8,7 +11,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://registry-service:8099/eureka
 
 #hystrix:
 #  command:
