--- a/registry-service/src/main/resources/bootstrap.yml
+++ b/registry-service/src/main/resources/bootstrap.yml
@@ -4,11 +4,11 @@ spring:
   profiles:
     active: desarrollo
   cloud:
-    config:
-      fail-fast: false
-      retry:
-        maxAttempts: 2000
-        maxInterval: 100000
-      uri: http://localhost:8081
+    config:      
+      uri: http://config-service:8081
       username: root
       password: s3cr3t
+#      fail-fast: true
+#      retry:
+#        maxAttempts: 2000
+#        maxInterval: 100000
