--- a/registry-service/src/main/resources/application.yml
+++ b/registry-service/src/main/resources/application.yml
@@ -1,17 +1,17 @@
-spring:
-  application:
-    name: registry-service
-server:
-  port: 8099
-
-eureka:
-  instance:
-    hostname: registry-service
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://registry-service:8099/eureka
+#spring:
+#  application:
+#    name: registry-service
+#server:
+#  port: 8099
+#
+#eureka:
+#  instance:
+#    hostname: registry-service
+#  client:
+#    registerWithEureka: false
+#    fetchRegistry: false
+#    serviceUrl:
+#      defaultZone: http://registry-service:8099/eureka
 
 #hystrix:
 #  command:
