--- a/servicio-hojas-vida/src/main/resources/bootstrap.yml
+++ b/servicio-hojas-vida/src/main/resources/bootstrap.yml
@@ -1,10 +1,22 @@
 spring:
   application:
     name: servicio-hojas-vida
-  profiles:
-    active: desarrollo
+#  DOCKER:
+#  profiles:
+#    active: desarrollo
+
   cloud:
     config:
-      uri: http://config-service:8081
+      # DOCKER:         
+      #uri: http://config-service:8081
+      
+      # LOCAL:
+      uri: http://localhost:8081
+      
       username: root
       password: s3cr3t
+      
+#      fail-fast: true
+#      retry:
+#        maxAttempts: 2000
+#        maxInterval: 100000
