Configuracion para produccion

--- a/config-data/registry-service-produccion.yml
+++ b/config-data/registry-service-produccion.yml
@@ -3,9 +3,9 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: ec2-3-143-222-212.us-east-2.compute.amazonaws.com
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}/eureka/
