--- a/config-data/servicio-empresa-produccion.yml
+++ b/config-data/servicio-empresa-produccion.yml
@@ -38,4 +38,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8099/eureka/
+      defaultZone: http://ec2-3-143-222-212.us-east-2.compute.amazonaws.com/eureka/
