--- a/config-data/servicio-pagos-produccion.yml
+++ b/config-data/servicio-pagos-produccion.yml
@@ -40,6 +40,10 @@ eureka:
     serviceUrl:
       defaultZone: http://ec2-3-143-222-212.us-east-2.compute.amazonaws.com/eureka/
 
+feign:
+  client:
+    url: http://ec2-3-142-91-151.us-east-2.compute.amazonaws.com/
+
 #Feign:
 #  hystrix:
 #    enabled: true
